{
    "name": "GameInput",
    "maps": [
        {
            "name": "Touchscreen",
            "id": "17a7ddf3-8e60-4a58-9484-cc9a5ad15a1c",
            "actions": [
                {
                    "name": "TapOnScreen",
                    "type": "Button",
                    "id": "0723a535-b52d-411a-9b92-c4731b82f80e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "0ff4d9f2-11e3-4918-9adf-1c141d6bfbac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapPosition",
                    "type": "Value",
                    "id": "c9c8fbf0-77ba-4250-8f40-e7f28f557dd5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScreenLocator",
                    "type": "Value",
                    "id": "4e85013f-abec-4b58-991e-c67193ace273",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FingerPos",
                    "type": "Value",
                    "id": "b7be1f37-606d-48c7-ab3a-6a0783480cf0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "545da9a9-fa3b-44eb-89a5-e2aafb281934",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapOnScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88634f51-f329-4554-aac3-c95a14369016",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbbc1265-2a16-4953-a4e7-27958d518b0a",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a27d453b-f947-4103-b9e9-d5581bbeab2c",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenLocator",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2528bf5-720d-4095-8752-9c95856af547",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FingerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}